# autoreply

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  setup.cfg
autoreply/: __init__.py  constants.py  dataset.py  misc_data.py
autoreply/modeling/: __init__.py  eda.py  evaluate.py  model.py  preprocess.py
modeling/: README.md  eda.ipynb  presentation.md  project-proposal.md
scripts/: split_datasets.py
