[metadata]
name = autoreply
version = 0.0.1
author = Shivnaren Srinivasan
author_email = shivnaren@gmail.com
description = Auto Reply
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShivnarenSrinivasan/wbg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
    unidecode
python_requires = >=3.7
package_dir =
    autoreply = autoreply

[options.package_data]
autoreply = py.typed
